--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -29,6 +29,7 @@
     font-weight: 300;
     display: block;
     width: 80%;
+    height: 6.5rem;
     margin: 0.8rem auto 0;
 }
 
@@ -37,6 +38,10 @@
 @media screen and (max-width: 1024px) {
     .container.testimonials__container{
         width: 60%;
+    }
+
+    .client__review{
+        height: 10rem;
     }
 }
 
@@ -49,5 +54,6 @@
 
     .client__review{
         width: var(--container-width-sm);
+        height: 13rem;
     }
 }
